objects/ccrz__E_LocaleMap__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>ccrz__BrowserLocale__c</fullName>
        <label>BrowserLocale</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__CountryCode__c</fullName>
        <label>CountryCode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__Currency__c</fullName>
        <label>Currency</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>CC Locale Map</label>
</CustomObject>